Evolution #122: Tags ajouté par l'utilisateurs: nouvelle approche

--- a/src/Muzich/CoreBundle/Resources/config/routing.yml
+++ b/src/Muzich/CoreBundle/Resources/config/routing.yml
@@ -48,6 +48,10 @@ ajax_add_tag:
   pattern: /ajax/add-tag/{name}
   defaults: { _controller: MuzichCoreBundle:Core:addTag, name: null }
   
+ajax_add_tag_arguments:
+  pattern: /ajax/add-tag/{name}/{arguments}
+  defaults: { _controller: MuzichCoreBundle:Core:addTag, name: null, arguments: null }
+  
 
 ####
 
