Anomalie #154: User standart a accès au panel de moderation

--- a/src/Muzich/CoreBundle/Resources/config/security.yml
+++ b/src/Muzich/CoreBundle/Resources/config/security.yml
@@ -46,6 +46,7 @@ security:
       
         # PAGES ACCESSIBLES AUX ADMINISTRATEURS
         - { path: ^/admin, role: ROLE_ADMIN }
+        - { path: "^/(?:fr|en)/admin", roles: ROLE_ADMIN }
       
         # AUTRES
         - { path: "^/hello", roles: IS_AUTHENTICATED_ANONYMOUSLY }
