Evolution #143: Commentaires sur un élément
Ajout d'un commentaire

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -64,3 +64,9 @@ MuzichFavoriteBundle:
   prefix:   /{_locale}/
   defaults:
     _locale: en|fr
+  
+MuzichCommentBundle:
+  resource: "@MuzichCommentBundle/Resources/config/routing.yml"
+  prefix:   /{_locale}/
+  defaults:
+    _locale: en|fr
