bug js fix: erreur dans les variables (logique de prog). On précise maintenant l'id de l'élément que l'on doit modifier après post en ajax.

--- a/src/Muzich/CoreBundle/Resources/config/routing.yml
+++ b/src/Muzich/CoreBundle/Resources/config/routing.yml
@@ -74,7 +74,7 @@ element_edit:
   defaults: { _controller: MuzichCoreBundle:Element:edit }
 
 element_update:
-  pattern: /element/{element_id}/update
+  pattern: /element/{element_id}/update/{dom_id}
   defaults: { _controller: MuzichCoreBundle:Element:update }
   
 element_remove:
