--- a/src/Muzich/CoreBundle/Resources/config/routing.yml
+++ b/src/Muzich/CoreBundle/Resources/config/routing.yml
@@ -89,3 +89,8 @@ element_new_get:
   pattern: /ajax/element/new/get/{refid}
   defaults: { _controller: MuzichCoreBundle:Element:getNews, refid: null }
   
+##
+
+ajax_tag_add_to_favorites:
+  pattern: /ajax/tag/add-to-favorites/{tag_id}/{token}
+  defaults: { _controller: MuzichCoreBundle:Core:addTagToFavorites }
