Evolution #107: Evolution ergonomiques
Proposition de diffuser l'élément ajouté dans un groupe si un de ses tags correspond
a un des groupe administré par l'utilisateur.

--- a/src/Muzich/CoreBundle/Resources/config/routing.yml
+++ b/src/Muzich/CoreBundle/Resources/config/routing.yml
@@ -94,3 +94,8 @@ element_new_get:
 ajax_tag_add_to_favorites:
   pattern: /ajax/tag/add-to-favorites/{tag_id}/{token}
   defaults: { _controller: MuzichCoreBundle:Core:addTagToFavorites }
+
+ajax_set_element_group:
+  pattern: /ajax/element/set-group/{element_id}/{group_id}/{token}
+  defaults: { _controller: MuzichCoreBundle:Core:setElementGroup }
+  
