--- a/src/Muzich/CoreBundle/Resources/config/routing.yml
+++ b/src/Muzich/CoreBundle/Resources/config/routing.yml
@@ -99,3 +99,6 @@ ajax_set_element_group:
   pattern: /ajax/element/set-group/{element_id}/{group_id}/{token}
   defaults: { _controller: MuzichCoreBundle:Core:setElementGroup }
   
+ajax_report_element:
+  pattern: /ajax/element/report/{element_id}/{token}
+  defaults: { _controller: MuzichCoreBundle:Core:reportElement }
