Evolution #147: Profil : Configuration de son adresse (gmap et tout)

--- a/src/Muzich/UserBundle/Resources/config/routing.yml
+++ b/src/Muzich/UserBundle/Resources/config/routing.yml
@@ -29,3 +29,7 @@ change_email_request:
 change_email_confirm:
   pattern: /account/change-email/confirm/{token}
   defaults: { _controller: MuzichUserBundle:User:changeEmailConfirm }
+  
+update_address:
+  pattern: /ajax/update-address/{token}
+  defaults: { _controller: MuzichUserBundle:User:updateAddress }
