--- a/src/Muzich/CoreBundle/Resources/config/routing.yml
+++ b/src/Muzich/CoreBundle/Resources/config/routing.yml
@@ -52,6 +52,13 @@ ajax_add_tag_arguments:
   pattern: /ajax/add-tag/{name}/{arguments}
   defaults: { _controller: MuzichCoreBundle:Core:addTag, name: null, arguments: null }
   
+ajax_element_add_vote_good:
+  pattern: /ajax/element/vote/add/good/{element_id}/{token}
+  defaults: { _controller: MuzichCoreBundle:Element:addVoteGood }
+  
+ajax_element_remove_vote_good:
+  pattern: /ajax/element/vote/remove/good/{element_id}/{token}
+  defaults: { _controller: MuzichCoreBundle:Element:removeVoteGood }
 
 ####
 
