--- a/src/Muzich/MynetworkBundle/Resources/config/routing.yml
+++ b/src/Muzich/MynetworkBundle/Resources/config/routing.yml
@@ -2,6 +2,8 @@
 mynetwork_index:
   pattern:  /my-network/{event_id}
   defaults: { _controller: MuzichMynetworkBundle:Mynetwork:index, event_id: null }
+  requirements:
+    event_id:  \d+
   
 mynetwork_search:
   pattern:  /my-network/search
