Anomalie #186: TagPrompt: err si http://
Passage de la requete en POST afin de faire passer tout les caractères que l'on veux.

--- a/src/Muzich/CoreBundle/Resources/config/routing.yml
+++ b/src/Muzich/CoreBundle/Resources/config/routing.yml
@@ -25,8 +25,8 @@ element_add:
   defaults: { _controller: MuzichCoreBundle:Core:elementAdd, group_slug: null }
 
 search_tag:
-  pattern: /search/tag/{string_search}/{timestamp}
-  defaults: { _controller: MuzichCoreBundle:Search:searchTag, string_search: null, timestamp: null }
+  pattern: /search/tag/{timestamp}
+  defaults: { _controller: MuzichCoreBundle:Search:searchTag, timestamp: null }
   
 search_tag_ig_by_name:
   pattern: /search/tagid/{string_search}
