Evolution #189: Route de choix de langue automatique
Désormais la locale doit être présente tout le temps. Les urls sans local sont redirigés vers
la route de choix automatique de la locale.

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -22,8 +22,12 @@ MuzichIndexBundle:
   prefix: /
     
 change_language:
-    pattern:  /change-language/{language}/{redirect}
-    defaults: { _controller: MuzichCoreBundle:Core:changeLanguage, redirect: referer }
+  pattern:  /change-language/{language}/{redirect}
+  defaults: { _controller: MuzichCoreBundle:Core:changeLanguage, redirect: referer }
+  
+language_automatic:
+  pattern:  /auto-language
+  defaults: { _controller: MuzichCoreBundle:Core:automaticLanguage }
   
 MuzichCoreBundle:
   resource: "@MuzichCoreBundle/Resources/config/routing.yml"
@@ -33,8 +37,8 @@ MuzichCoreBundle:
 MuzichHomeBundle:
   resource: "@MuzichHomeBundle/Resources/config/routing.yml"
   prefix: /{_locale}/
-  defaults:
-    _locale: fr
+#  defaults:
+#    _locale: fr
     
 # On doit rajouter une route au cas ou la langue n'est pas précisé.
 home_bis:
