Evolution #166: La recherche
Ajout de la recherche globale. Suppression de la recherche user et
groupe dans interface. Logique de recherche d'éléments pas encore intégré.

--- a/src/Muzich/CoreBundle/Resources/config/routing.yml
+++ b/src/Muzich/CoreBundle/Resources/config/routing.yml
@@ -130,8 +130,17 @@ ajax_element_proposed_tags_refuse:
   pattern: /ajax/element/proposed/tags/refuses/{element_id}/{token}
   defaults: { _controller: MuzichCoreBundle:Element:proposedTagsRefuse }
   
+## search
+  
+global_search:
+  pattern:  /search
+  defaults: { _controller: MuzichCoreBundle:Search:global }
+  
+  
 ## lol
 
 teapot:
   pattern: /what/are/you
   defaults: { _controller: MuzichCoreBundle:Info:teapot }
+  
+  
