Mise a jour des paramètres pour travail en dev

--- a/app/config/parameters.ini
+++ b/app/config/parameters.ini
@@ -2,12 +2,12 @@
 ; by enclosing the key with % (like %database_user%)
 ; Comments start with ';', as in php.ini
 [parameters]
-    database_driver="pdo_pgsql"
+    database_driver="pdo_mysql"
     database_host="localhost"
-    database_port="5432"
+    database_port="3306"
     database_name="muzich"
     database_user="muzich"
-    database_password="toto"
+    database_password="muzich"
     mailer_transport="smtp"
     mailer_host="localhost"
     mailer_user=""
