Evolution #357: Maj interface d'ajout
Modif partielle de l'interface d'ajout: champ url seul, avec bouton "ajouter"
Requete ajax qui récupère données des apis
reste a traiter ces données et afficher le reste du formulaire.

--- a/src/Muzich/CoreBundle/Resources/config/routing.yml
+++ b/src/Muzich/CoreBundle/Resources/config/routing.yml
@@ -155,4 +155,10 @@ teapot:
   pattern: /what/are/you
   defaults: { _controller: MuzichCoreBundle:Info:teapot }
   
-  
+#
+
+element_retrieve_api_datas:
+  pattern: /ajax/element/get/datas/api
+  defaults: { _controller: MuzichCoreBundle:Element:getDatasApi }
+  requirements:
+    method:  POST
