--- a/src/Muzich/CoreBundle/Resources/config/routing.yml
+++ b/src/Muzich/CoreBundle/Resources/config/routing.yml
@@ -154,5 +154,16 @@ global_search:
 teapot:
   pattern: /what/are/you
   defaults: { _controller: MuzichCoreBundle:Info:teapot }
-  
-  
+
+#
+
+element_retrieve_api_datas:
+  pattern: /ajax/element/get/datas/api
+  defaults: { _controller: MuzichCoreBundle:Element:getDatasApi }
+  requirements:
+    method:  POST
+    
+element_show_need_tags:
+  pattern: /need-tags
+  defaults: { _controller: MuzichHomeBundle:Home:needTags }
+
