--- a/src/Muzich/IndexBundle/Resources/config/routing.yml
+++ b/src/Muzich/IndexBundle/Resources/config/routing.yml
@@ -6,7 +6,8 @@ index_without_locale:
     
 index:
     pattern:  /hello/{_locale}
-    defaults: { _controller: MuzichIndexBundle:Index:index }
+    defaults:
+      _controller: MuzichIndexBundle:Index:index
 
 fos_user_security:
     resource: "@FOSUserBundle/Resources/config/routing/security.xml"
@@ -15,19 +16,15 @@ fos_user_security:
 fos_user_profile:
     resource: "@FOSUserBundle/Resources/config/routing/profile.xml"
     prefix: /{_locale}/profile/
-    defaults: { _locale: fr }
 
 fos_user_register:
     resource: "@FOSUserBundle/Resources/config/routing/registration.xml"
     prefix: /{_locale}/register/
-    defaults: { _locale: fr }
 
 fos_user_resetting:
     resource: "@FOSUserBundle/Resources/config/routing/resetting.xml"
     prefix: /{_locale}/resetting
-    defaults: { _locale: fr }
 
 fos_user_change_password:
     resource: "@FOSUserBundle/Resources/config/routing/change_password.xml"
     prefix: /{_locale}/change-password/
-    defaults: { _locale: fr }
