--- a/src/Muzich/CoreBundle/Resources/config/routing.yml
+++ b/src/Muzich/CoreBundle/Resources/config/routing.yml
@@ -164,6 +164,10 @@ elements_get_filter_data_autoplay:
   pattern: /ajax/elements/get/datas/autoplay/{type}/{data}
   defaults: { _controller: MuzichCoreBundle:Element:getDatasAutoplay, data: null }
     
+elements_get_filter_data_autoplay_show:
+  pattern: /ajax/show/{show_type}/{show_id}/elements/get/datas/autoplay/{data}
+  defaults: { _controller: MuzichCoreBundle:Element:getDatasAutoplay, type: 'show', data: null }
+    
 element_show_need_tags:
   pattern: /need-tags
   defaults: { _controller: MuzichHomeBundle:Home:needTags }
