Evolution #196: Liste de lecture
Liste de ecture sur page favoris

--- a/src/Muzich/CoreBundle/Resources/config/routing.yml
+++ b/src/Muzich/CoreBundle/Resources/config/routing.yml
@@ -168,6 +168,10 @@ elements_get_filter_data_autoplay_show:
   pattern: /ajax/show/{show_type}/{show_id}/elements/get/datas/autoplay/{data}
   defaults: { _controller: MuzichCoreBundle:Element:getDatasAutoplay, type: 'show', data: null }
     
+elements_get_filter_data_autoplay_favorite:
+  pattern: /ajax/favorite/{show_type}/{show_id}/elements/get/datas/autoplay/{data}
+  defaults: { _controller: MuzichCoreBundle:Element:getDatasAutoplay, type: 'favorite', data: null }
+    
 element_show_need_tags:
   pattern: /need-tags
   defaults: { _controller: MuzichHomeBundle:Home:needTags }
