Evolution #472: Inclusion jPlayer
Mise en place script jplayer pour lecteur générique. Utilisé actuelement dans l'autoplay pour jamendo.

--- a/src/Muzich/CoreBundle/Resources/config/routing.yml
+++ b/src/Muzich/CoreBundle/Resources/config/routing.yml
@@ -179,3 +179,7 @@ element_show_need_tags:
 element_dom_get_one:
   pattern: /ajax/element/dom/get/{type}/{element_id}
   defaults: { _controller: MuzichCoreBundle:Element:getOneDom, element_id: null }
+
+element_get_stream_data:
+  pattern: /ajax/element/data/get/stream/{element_id}
+  defaults: { _controller: MuzichCoreBundle:Element:geJamendotStreamDatas, element_id: null }
