--- a/src/Muzich/UserBundle/Resources/config/routing.yml
+++ b/src/Muzich/UserBundle/Resources/config/routing.yml
@@ -37,3 +37,10 @@ update_address:
 event_view_elements:
   pattern: /event/view/elements/{event_id}
   defaults: { _controller: MuzichUserBundle:Event:viewElements }
+
+event_delete:
+  pattern: /event/delete/{event_id}/{token}
+  defaults: { _controller: MuzichUserBundle:Event:delete }
+  requirements:
+    _method:  GET
+    message_id: \d+
