--- a/src/Muzich/MynetworkBundle/Resources/config/routing.yml
+++ b/src/Muzich/MynetworkBundle/Resources/config/routing.yml
@@ -1,6 +1,9 @@
 mynetwork_index:
   pattern:  /my-network/{event_id}
-  defaults: { _controller: MuzichMynetworkBundle:Mynetwork:index, event_id: null }
+  defaults: { _controller: MuzichMynetworkBundle:Mynetwork:index }
   requirements:
     event_id:  \d+
   
+mynetwork_home:
+  pattern:  /my-network
+  defaults: { _controller: MuzichHomeBundle:Home:index, network: network_personal }
