Evolution #545: chargements des lecteurs
Les ouverture de lecteur se font désormais comme ceci: Si le lecteur est connu coté
javascript ou lance la création d'un lecteur dynamiquement (avec apis). Sinon on
recupere le code embed construit lors du traitement (ajout)

Ce commit comprend le code javascript pour youtube

--- a/src/Muzich/CoreBundle/Resources/config/routing.yml
+++ b/src/Muzich/CoreBundle/Resources/config/routing.yml
@@ -183,3 +183,7 @@ element_dom_get_one:
 element_get_stream_data:
   pattern: /ajax/element/data/get/stream/{element_id}
   defaults: { _controller: MuzichCoreBundle:Element:geJamendotStreamDatas, element_id: null }
+
+url_get_embed_for_element:
+  pattern: /ajax/element/data/get/embed/{element_id}
+  defaults: { _controller: MuzichCoreBundle:Element:getEmbedCode, element_id: null }
