Evolution #566: Gestion de l'avatar
Ajout d'un bundle (gregoir image) pour gestion des images
Ajout de la gestion de l'avatar: affichage, upload.

--- a/src/Muzich/UserBundle/Resources/config/routing.yml
+++ b/src/Muzich/UserBundle/Resources/config/routing.yml
@@ -44,3 +44,9 @@ event_delete:
   requirements:
     _method:  GET
     message_id: \d+
+  
+user_update_avatar:
+  pattern:  /account/update-avatar
+  defaults: { _controller: MuzichUserBundle:User:updateAvatar }
+  requirements:
+    _method:  POST
