--- a/src/Muzich/CoreBundle/Resources/config/routing.yml
+++ b/src/Muzich/CoreBundle/Resources/config/routing.yml
@@ -104,6 +104,10 @@ element_new_get:
   pattern: /ajax/element/new/get/{refid}
   defaults: { _controller: MuzichCoreBundle:Element:getNews, refid: null }
   
+element_remove_from_group:
+  pattern: /ajax/group/{group_id}/remove-element/{element_id}/{token}
+  defaults: { _controller: MuzichCoreBundle:Element:removeFromGroup }
+  
 ##
 
 ajax_tag_add_to_favorites:
