Evolution #590: Mail pour news
Fonction codé !! test non codés

--- a/src/Muzich/IndexBundle/Resources/config/routing.yml
+++ b/src/Muzich/IndexBundle/Resources/config/routing.yml
@@ -1,5 +1,11 @@
 ## Routing du Bundle Index
 
+presubscription_register:
+  pattern:  /hello/{_locale}/presubscription
+  defaults: { _controller: MuzichIndexBundle:Index:presubscription }
+  requirements:
+    _method:  POST
+
 index_without_locale:
     pattern:  /hello/
     defaults: { _controller: MuzichCoreBundle:Core:automaticLanguage }
