Evolution #161: Session sécurité
Ajout d'un element de perturbation des tokens, et ajout d'un token pour la suppression d'element.

--- a/src/Muzich/CoreBundle/Resources/config/routing.yml
+++ b/src/Muzich/CoreBundle/Resources/config/routing.yml
@@ -93,7 +93,7 @@ element_update:
   defaults: { _controller: MuzichCoreBundle:Element:update }
   
 element_remove:
-  pattern: /element/{element_id}/remove
+  pattern: /element/{element_id}/remove/{token}
   defaults: { _controller: MuzichCoreBundle:Element:remove }
   
 element_new_count:
