--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -17,9 +17,9 @@ monolog:
             handler: swift
         swift:
             type:       swift_mailer
-            from_email: error@siga-jsp.fr
+            from_email: error@smuzi.ch
             to_email:   sevajol.bastien@gmail.com
-            subject:    An Error Occurred!
+            subject:    An Error Occurred on muzi.ch!
             level:      debug
 
 parameters:
