Evolution #591: Pages statiques

--- a/src/Muzich/CoreBundle/Resources/config/routing.yml
+++ b/src/Muzich/CoreBundle/Resources/config/routing.yml
@@ -82,6 +82,10 @@ info_sites:
   pattern: /info/sites
   defaults: { _controller: MuzichCoreBundle:Info:sites }
   
+info_cgu:
+  pattern: /info/cgu
+  defaults: { _controller: MuzichCoreBundle:Info:cgu }
+  
 ####
 
 element_edit:
