--- a/src/Muzich/IndexBundle/Resources/config/routing.yml
+++ b/src/Muzich/IndexBundle/Resources/config/routing.yml
@@ -14,6 +14,7 @@ index:
     pattern:  /hello/{_locale}
     defaults:
       _controller: MuzichIndexBundle:Index:index
+      _locale:     ''
 
 fos_user_security:
     resource: "@FOSUserBundle/Resources/config/routing/security.xml"
